--- a/index.html
+++ b/index.html
@@ -4,38 +4,40 @@
     <title>架空の学校案内 /LP</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width ,initial-scale=1">
   </head>
   <body>
     <header>
       <h1>通信制高校 - 菜の花学園</h1>
       <nav>
         <ul>
-          <li>在校生ログイン</li>
-          <li>学校紹介</li>
-          <li>アクセス</li>
-          <li>問い合わせ</li>
+          <li><a href="">在校生ログイン</a></li>
+          <li><a href="">学校紹介</a></li>
+          <li><a href="">アクセス</a></li>
+          <li><a href="">問い合わせ</a></li>
         </ul>
       </nav>
     </header>
     <main>
       
       <section class="main-theam">
-        <img src="../img/school-logo.png"  width="350" alt="学校ロゴ" class="logo">
+        <img src="img/school-logo.png"  width="350px" alt="学校ロゴ" class="logo">
         <div class="main-message">
         <h2>わたしの居場所はここにある</h2>
         <p>〜夢への第一歩〜</p>
         </div>
       </section>
       <section class="point">
-      <img src="../img/point.png" width="90%" class="point-title">
+      <img src="img/point.png" width="80%" class="point-title">
      <ul>
-      <li><img src="../img/fukidasi-1.png" width="90%" alt=""></li>
-      <li><img src="../img/fukidasi-2.png" width="90%" alt=""></li>
-      <li><img src="../img/fukidasi-3.png" width="90%" alt=""></li>
-      <li><img src="../img/fukidasi-4.png" width="90%" alt=""></li>
-     </ul>
-     <h4>→ → 資料請求はこちら</h4>
+      <li><img src="img/fukidasi-1.png" width="90%" alt=""></li>
+      <li><img src="img/fukidasi-2.png" width="90%" alt=""></li>
+      <li><img src="img/fukidasi-3.png" width="90%" alt=""></li>
+      <li><img src="img/fukidasi-4.png" width="90%" alt=""></li>
+    </ul>
+    <div class="document-request">
+      <a href=""><p>資料請求</p></a>
+    </div>
     </section>
     </main>
     <footer>
