--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>架空の学校案内 /LP</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="restyle.css">
     <meta name="viewport" content="width=device-width ,initial-scale=1">
   </head>
   <body>
@@ -11,33 +11,43 @@
       <h1>通信制高校 - 菜の花学園</h1>
       <nav>
         <ul>
-          <li><a href="">在校生ログイン</a></li>
-          <li><a href="">学校紹介</a></li>
-          <li><a href="">アクセス</a></li>
-          <li><a href="">問い合わせ</a></li>
+          <li><a href="#">在校生ログイン</a></li>
+          <li><a href="#">学校紹介</a></li>
+          <li><a href="#">アクセス</a></li>
+          <li><a href="#">問い合わせ</a></li>
         </ul>
       </nav>
     </header>
     <main>
       
       <section class="main-theam">
-        <img src="img/school-logo.png"  width="350px" alt="学校ロゴ" class="logo">
+        <img src="img/23018745.png" width="95%" class="main-image">
+        <img src="img/school-logo.png"  width="300" alt="学校ロゴ" class="logo">
         <div class="main-message">
         <h2>わたしの居場所はここにある</h2>
         <p>〜夢への第一歩〜</p>
         </div>
       </section>
       <section class="point">
-      <img src="img/point.png" width="80%" class="point-title">
-     <ul>
-      <li><img src="img/fukidasi-1.png" width="90%" alt=""></li>
-      <li><img src="img/fukidasi-2.png" width="90%" alt=""></li>
-      <li><img src="img/fukidasi-3.png" width="90%" alt=""></li>
-      <li><img src="img/fukidasi-4.png" width="90%" alt=""></li>
+      <ul>
+        <li><img src="img/point.png" width="300" height="95" class="point-title"></li>
+        <li class="point1">
+        <img src="img/fukidasi-g.png" height="95%" width="90%">
+        <p><span>完全個別カリキュラム</span><br>一人一人に合わせたカリキュラムを<br>組んでいきます。</p></li>
+      <li class="point2">
+        <img src="img/fukidasi-p.png" height="95%" width="90%">
+        <p><span>選べるスクーリング日数</span><br>週1日から週5日まで。
+          <br>年度の途中で変更も可能！</p></li>
+      <li class="point3">
+        <img src="img/fukidasi-g.png"height="95%" width="90%">
+        <p><span>スクールカウンセラー常駐</span><br>お茶菓子もご用意してます。<br>リモート面談も可能です。</p></li>
+      <li class="point4">
+        <img src="img/fukidasi-p.png"height="95%" width="90%">
+        <p><span>充実の学習サポート</span><br>中学からの学び直しや<br>学習資料・動画も配信しています。</p></li>
+        <li class="document-request">
+        <a href="#">資料請求</a>
+        </li>
     </ul>
-    <div class="document-request">
-      <a href=""><p>資料請求</p></a>
-    </div>
     </section>
     </main>
     <footer>
