”レスポンシブ頑張ったよ”

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>架空の学校案内 /LP</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="restyle.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width ,initial-scale=1">
   </head>
   <body>
@@ -19,7 +19,6 @@
       </nav>
     </header>
     <main>
-      
       <section class="main-theam">
         <img src="img/23018745.png" width="95%" class="main-image">
         <img src="img/school-logo.png"  width="300" alt="学校ロゴ" class="logo">
@@ -28,21 +27,22 @@
         <p>〜夢への第一歩〜</p>
         </div>
       </section>
-      <section class="point">
+
+      <section class="sub">
       <ul>
         <li><img src="img/point.png" width="300" height="95" class="point-title"></li>
-        <li class="point1">
-        <img src="img/fukidasi-g.png" height="95%" width="90%">
+        <li class="point green">
+        <img src="img/fukidasi-g.png" height="120%" width="90%">
         <p><span>完全個別カリキュラム</span><br>一人一人に合わせたカリキュラムを<br>組んでいきます。</p></li>
-      <li class="point2">
-        <img src="img/fukidasi-p.png" height="95%" width="90%">
+      <li class="point pink">
+        <img src="img/fukidasi-p.png" height="120%" width="90%">
         <p><span>選べるスクーリング日数</span><br>週1日から週5日まで。
           <br>年度の途中で変更も可能！</p></li>
-      <li class="point3">
-        <img src="img/fukidasi-g.png"height="95%" width="90%">
+      <li class="point green">
+        <img src="img/fukidasi-g.png"height="120%" width="90%">
         <p><span>スクールカウンセラー常駐</span><br>お茶菓子もご用意してます。<br>リモート面談も可能です。</p></li>
-      <li class="point4">
-        <img src="img/fukidasi-p.png"height="95%" width="90%">
+      <li class="point pink">
+        <img src="img/fukidasi-p.png"height="120%" width="90%">
         <p><span>充実の学習サポート</span><br>中学からの学び直しや<br>学習資料・動画も配信しています。</p></li>
         <li class="document-request">
         <a href="#">資料請求</a>
